[tool.poetry]
name = "test-connectionpool"
version = "0.1.0"
description = ""
authors = ["puroong <skfk0135@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "2.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
